- Fix Dockerfile.